--- a/config/locales/ko.yml
+++ b/config/locales/ko.yml
@@ -1,4 +1,4 @@
 ---
 ko:
   evaluation_lack: "강평열람 권한을 오픈하기 위해 강평을 해주세요!" 
-  more_search_keyword: "2글자 이상 입력해주세요"
+  more_search_keyword: "두 글자 이상 입력해주세요"
