form i18n, 150words to 100words

--- a/config/locales/ko.yml
+++ b/config/locales/ko.yml
@@ -2,3 +2,11 @@
 ko:
   evaluation_lack: "강평열람 권한을 오픈하기 위해 강평을 해주세요!" 
   more_search_keyword: "두 글자 이상 입력해주세요"
+
+  form:
+    placeholder: "위의 내용 외에 더 자세히 작성해주시면 큰 도움이 될거에요!\n(최소 100자이상 작성해야 합니다.)"
+    submit_button: "작성하기"
+    lack_word: "100자를 채워주세요!"
+    complete: "소중한 강의평가 감사합니다!"
+    left_word: "글자 남았어요!"
+
