--- a/config/locales/ko.yml
+++ b/config/locales/ko.yml
@@ -2,6 +2,11 @@
 ko:
   search:
     lack_word: "두 글자 이상 입력해주세요"
+    
+  report:
+    placeholder: "지나친 욕설/비방/허위 정보/무성의한 정보 등을 신고해주세요 쏼라쏼라 
+    한번 신고하신 내용은 취소가 불가능하니 신중히 작성해주세요 빠른 시일 내에 운영자가 검토 후 처리하겠습니다"
+    submit_button: "신고하기"
 
   form:
     placeholder: "위의 내용 외에 더 자세히 작성해주시면 큰 도움이 될거에요!
