--- a/config/locales/ko.yml
+++ b/config/locales/ko.yml
@@ -75,3 +75,21 @@ ko:
     writer: "작성자"
     no_evaluation: "아직 작성된 평가가 없어요!"
     recomment: "지금 소중한 강의평가를 남겨주세요"
+
+
+  user:
+      p1: |
+        %{email}으로 인증메일이 발송되었습니다!
+      p2: |
+        3시간 이내에 이메일의 인증 링크를 클릭하시면
+        회원 가입이 완료됩니다.
+        이메일이 인증되지 않았을 경우, 로그인을 할 수 없습니다.
+      p3: |
+        이메일을 받지 못하셨다면,
+        인증메일을 재발송하여 다시 메일을 확인해주세요.
+      bye: |
+        Bye!
+        See you!
+      error: >
+        Something happend.
+        Try later.
