--- a/config/locales/ko.yml
+++ b/config/locales/ko.yml
@@ -4,8 +4,10 @@ ko:
     lack_word: "두 글자 이상 입력해주세요"
     
   report:
-    placeholder: "지나친 욕설/비방/허위 정보/무성의한 정보 등을 신고해주세요 쏼라쏼라 
-    한번 신고하신 내용은 취소가 불가능하니 신중히 작성해주세요 빠른 시일 내에 운영자가 검토 후 처리하겠습니다"
+    placeholder: |
+      지나친 욕설/비방/허위 정보/무성의한 정보 등을 신고해주세요.
+      한번 신고하신 내용은 취소가 불가능하니 신중히 작성해주세요.
+      빠른 시일 내에 운영자가 검토 후 처리하겠습니다.
     submit_button: "신고하기"
 
   form:
@@ -85,18 +87,19 @@ ko:
 
 
   user:
-      p1: |
-        %{email}으로 인증메일이 발송되었습니다!
-      p2: |
-        3시간 이내에 이메일의 인증 링크를 클릭하시면
-        회원 가입이 완료됩니다.
-        이메일이 인증되지 않았을 경우, 로그인을 할 수 없습니다.
-      p3: |
-        이메일을 받지 못하셨다면,
-        인증메일을 재발송하여 다시 메일을 확인해주세요.
-      bye: |
-        Bye!
-        See you!
-      error: >
-        Something happend.
-        Try later.
+    sign_in: "Sign In"
+    sign_up: "Sign Up"
+    email: "Email"
+    password: "Password"
+    forgot: "Forgot your email or password?"
+    remember: "Remember me?"
+    facebook: "Login with Facebook?"
+    p1: |
+      %{email}으로 인증메일이 발송되었습니다!
+    p2: |
+      3시간 이내에 이메일의 인증 링크를 클릭하시면
+      회원 가입이 완료됩니다.
+      이메일이 인증되지 않았을 경우, 로그인을 할 수 없습니다.
+    p3: |
+      이메일을 받지 못하셨다면,
+      인증메일을 재발송하여 다시 메일을 확인해주세요.
