--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -4,9 +4,11 @@ en:
     lack_word: "Two or more letters please!"
 
   report:
-    placeholder: "지나친 욕설/비방/허위 정보/무성의한 정보 등을 신고해주세요 쏼라쏼라
-    한번 신고하신 내용은 취소가 불가능하니 신중히 작성해주세요 빠른 시일 내에 운영자가 검토 후 처리하겠습니다"
-    submit_button: "신고하기"
+    placeholder: |
+      Please report abusive language/insult/false information/insincere evaluations.
+      Once submitted, it cannot be canceled.
+      We will soon check and take action.
+    submit_button: "Submit"
 
   form:
     placeholder: "위의 내용 외에 더 자세히 작성해주시면 큰 도움이 될거에요!
